--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint": "eslint 'src/**/*.{ts,tsx}'",
+    "format": "prettier --write 'src/**/*.{ts,tsx,js,jsx,json,css,md}'",
+    "type-check": "tsc --noEmit"
   },
   "eslintConfig": {
     "extends": [
@@ -47,7 +50,8 @@
     "@commitlint/config-conventional": "^19.8.0",
     "commitlint": "^19.8.0",
     "husky": "^8.0.0",
-    "lint-staged": "^15.5.1"
+    "lint-staged": "^15.5.1",
+    "prettier": "^3.5.3"
   },
   "lint-staged": {
     "*.{ts,tsx}": "eslint --fix",
